apps/production/gatus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatus
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - gatus.ronaldlokers.nl
  rules:
    - host: gatus.ronaldlokers.nl
      http:
        paths:
          - backend:
              service:
                name: gatus
                port:
                  number: 8080
            path: /
            pathType: Prefix
